# worldrpgram

./: .env.compose  .env.dev  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini  vector.yaml
docs/: code.d2  code.html  code.mermaid  world.html
migrations/clickhouse/: add_ts_key.py  results.py  runner.py  state.json  trade.py
observability/: prometheus.yml
src/rpgram_setup/: api.py  bare.py  main.py
src/rpgram_setup/application/: auth.py  configuration.py  converters.py  equipment.py  exceptions.py  factories.py  identity.py  models.py  queries.py  register.py  services.py  shop.py  start_battle.py
src/rpgram_setup/application/battle/: results.py  start_battle.py  take_event.py  wait.py
src/rpgram_setup/domain/: battle.py  consts.py  core.py  economics.py  entities.py  exceptions.py  factory.py  gateways.py  heroes.py  items.py  player.py  user.py  user_types.py
src/rpgram_setup/entry/: bare.py  ioc.py  main.py
src/rpgram_setup/infrastructure/: api.py  config.py  consts.py  converters.py  dependencies.py  exceptions.py  general.py  ioc.py  logging.py  mappers.py  models.py  rabbit.py  repository.py  session.py
src/rpgram_setup/presentation/: battle.py  converters.py  hero.py  middlewares.py  models.py  player.py
tests/rpgram/: app.py  data.py  stubs.py  test_auth.py  test_concurrency.py  test_currency.py  test_players.py
tests/rpgram/fixtures/: currency.py  ioc.py
tools/: code_graph.py
tools/doc/: code_graph.py  generate_mermaid.ps1
(+22 files in other folders)
