[project]
name = 'rpgram_setup'
version = '0.0.0a'
readme = "README.md"

[project.scripts]
mermaid = "doc.code_graph:make_graph"
[tool.setuptools.packages.find]
where = ["src", "tools"]

[tool.pytest]
asyncio_default_fixture_loop_scope = "function"

[tool.isort]
profile = "black"
include_trailing_comma = true

[tool.mypy]
exclude = "^.*tests|migrations|tools.*$"
ignore_missing_imports = true

[tool.black]
line-length = 89

